--- a/src/components/inventory/inventoryApp.css
+++ b/src/components/inventory/inventoryApp.css
@@ -19,9 +19,11 @@
 }
 
 #category-container {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
+    align-self: flex-end;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-width: 1140px;
 }
 
 #table-header-container {
